--- a/public/index.html
+++ b/public/index.html
@@ -3,26 +3,15 @@
 
 <head>
   <title>My Image Gallery</title>
-  <!--importa lo stile locale-->
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
   <div id="all-container">
-    <!-- loader -->
-    <div id="loader">
-      <div>
-        Loading...</div>
-    </div>
-    <!--end loader -->
-    <!-- my modal -->
     <div class="modal-fade" id="modal" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 id="modal-title">Modal Header</h4>
-            <button type="button" class="close" data-dismiss="modal" id="close-form">&times;</button>
           </div>
           <div class="modal-body">
             <div class="modal-img-container">
@@ -34,63 +23,23 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="edit-button" data-dismiss="modal" id="edit-button">Edit</button>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- end my modal   -->
-    <div id="modal-edit-form">
-      <form style="position: fixed;margin: 0 auto;top: 0;bottom: 0;left: 0;right: 0;" id="edit-form">
-        <input type="text" id="modal-edit-title" placeholder="Edit title">
-        <input type="text" id="modal-edit-desc" placeholder="Edit description">
-        <button type="button" class="edit-button" onclick="updateImageData()"
-          style="background-color: green;">Salva</button>
-        <button type="button" class="edit-button" onclick="sistema()" style="background-color: orange;">Annulla</button>
-      </form>
-    </div>
-
-    <!--toolbar-->
     <div id="toolbar">
       <h1>
-        <!--INVENTA UN TITOLO FANTASTICO-->
         My Gallery App
       </h1>
-
-      <button id="add-image-button" onclick="document.getElementById('image-form').style.display = 'block';">Aggiungi
-        Immagine</button>
     </div>
-    <!--end toolbar-->
-    <!-- The image cards will be inserted here -->
     <div id="image-container" style="margin-top:150px">
-      <!-- The image cards will be inserted here -->
     </div>
-    <!-- end image container -->
-    <!-- The image form -->
-    <div id="form-container">
-      <form id="image-form" style="display: none;position: fixed;margin: 0 auto;top: 0;bottom: 0;left: 0;right: 0;">
-        <input type="file" id="image-file" accept="image/*" required>
-        <input type="text" id="image-title" placeholder="Immagine titolo" required>
-        <input type="text" id="image-description" placeholder="Immagine descrizione" required>
-        <button type="submit">Carica Immagine</button>
-        <button type="button" onclick="document.getElementById('image-form').style.display = 'none';"
-          style="background-color: orange;">Annulla</button>
-        <img id="image-preview" src="" alt="Anteprima immagine" width="200" style="display: none;">
-      </form>
-    </div>
-    <!-- end image form -->
   </div>
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <!-- The Firebase JavaScript SDK must be included in order to use the Storage and Firestore APIs -->
   <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-storage.js"></script>
 
   <script>
-    // Initialize the Firebase app and the Firestore database
-    // ...
-    // Initialize the Firebase app
     const firebaseConfig = {
       apiKey: "AIzaSyB8m3IyfgaH7_S3f0z_8j7Nf-ryoL5H3_g",
       authDomain: "wada-42dd4.firebaseapp.com",
@@ -101,10 +50,13 @@
       appId: "1:87083060977:web:a525a46e147b0f0e7a2350"
     };
     firebase.initializeApp(firebaseConfig);
-    // Initialize the Firestore database
     const db = firebase.firestore();
+    document.getElementById('modal').addEventListener('click', () => {
+      document.getElementById('modal').style.display = 'none';
+    });
 
-    // Image class to represent an image object
+    
+
     class MyImage {
       constructor(url, titolo, descrizione) {
         this.url = url;
@@ -112,112 +64,42 @@
         this.descrizione = descrizione;
       }
     }
-    // ImageList class to manage the list of images
     class ImageList {
       constructor() {
         this.images = [];
       }
 
-      // Add an image to the list
       addImage(image) {
         this.images.push(image);
       }
 
-      // Get the list of images
       getImages() {
         return this.images;
       }
     }
-    // ImageService class to handle the communication with the Firestore database
     class ImageService {
-      // Get the list of images from the Firestore database
       async getImageList() {
-        // Create a new image list
         const imageList = new ImageList();
-
-        // Get the images collection from the Firestore database
         const imagesCollection = db.collection('images');
-
-        // Get the list of images from the collection
         const images = await imagesCollection.get();
-
-        // Add each image to the list
         images.forEach(image => {
           const url = image.data().url;
           const titolo = image.data().titolo;
           const descrizione = image.data().descrizione;
           imageList.addImage(new MyImage(url, titolo, descrizione));
         });
-
         return imageList;
       }
-      // Add an image to the Firestore database
-      async addImage(image) {
-        // Add the image to the images collection
-        const imageRef = db.collection('images').doc();
-        await imageRef.set({
-          url: image.url,
-          titolo: image.titolo,
-          descrizione: image.descrizione
-        });
-
-        // Return the image ID
-        return imageRef.id;
-      }
-      // Update an image in the Firestore database
-      async updateImage(imageId, image) {
-        // Get the image from the images collection
-        const imageRef = db.collection('images').doc(imageId);
-        // Convert the image object to a data object
-        const data = {
-          url: image.url,
-          titolo: image.titolo,
-          descrizione: image.descrizione
-        };
-        console.log(data);
-        // Update the image in the collection
-        await imageRef.update(data).catch(error => {
-          console.log(error);
-        }).then(() => {
-          console.log('Image updated successfully');
-        });
-      }
-      // Delete an image from the Firestore database
-      async deleteImage(imageId) {
-        // Get the image from the images collection
-        const imageRef = db.collection('images').doc(imageId);
-        // Delete the image from the collection
-        await imageRef.delete();
-      }
     }
-    // ImageServiceController class to handle the communication with the ImageService class
     class ImageServiceController {
-      // Constructor to initialize the ImageService instance
       constructor() {
         this.imageService = new ImageService();
       }
 
-      // Function to get the list of images from the Firestore database
       async getImageList() {
         return this.imageService.getImageList();
       }
-
-      // Function to add an image to the Firestore database
-      async addImage(image) {
-        return this.imageService.addImage(image);
-      }
-
-      // Function to update an image in the Firestore database
-      async updateImage(imageId, image) {
-        return this.imageService.updateImage(imageId, image);
-      }
-
-      // Function to delete an image from the Firestore database
-      async deleteImage(imageId) {
-        return this.imageService.deleteImage(imageId);
-      }
     }
-    // Function to create an HTML element for an image
     function createImageElement(image) {
 
       // Create the image element
@@ -233,9 +115,7 @@
       //quando clicco l'immagine mi apre il modal
       imgElement.addEventListener('click', () => {
         //utilizza gli id scritti nell html attenzione che qua image è undefined
-        selectedImage = image;
         document.getElementById('modal-image').src = image.url;
-        document.getElementById('modal-title').innerText = image.titolo;
         document.getElementById('modal-desc').innerText = image.descrizione;
         document.getElementById('modal-h4').innerText = image.titolo;
         // Show the modal
@@ -247,140 +127,20 @@
       //imgContainer.appendChild(titleElement);
       return imgContainer;
     }
-    // Function to display the list of images in the gallery
     async function displayImages() {
-      // Create an instance of the ImageServiceController class
       const imageServiceController = new ImageServiceController();
-      // Get the list of images from the Firestore database
       const imageList = await imageServiceController.getImageList();
-      // Clear the image container
       document.getElementById('image-container').innerHTML = '';
-      // Add an HTML element for each image to the image container
       imageList.getImages().forEach(image => {
         const imgElement = createImageElement(image);
         document.getElementById('image-container').appendChild(imgElement);
       });
     }
-    // Function to upload an image to Firebase Storage and add it to the Firestore database
-    function uploadImage(file, title, description) {
-      document.getElementById('loader').style.display = 'block';
-      // Get the file name
-      const fileName = file.name;
-      // Create a storage reference
-      const storageRef = firebase.storage().ref('images/' + fileName);
-      // Upload the file
-      const task = storageRef.put(file);
-      // Update the upload progress
-      task.on('state_changed',
-        (snapshot) => {
-          // Get the upload progress
-          const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-          console.log('Upload is ' + progress + '% done');
-        },
-        (error) => {
-          // Handle errors
-          console.error(error);
-        },
-        () => {
-          // Upload completed successfully, now we can get the download URL
-          task.snapshot.ref.getDownloadURL().then((downloadURL) => {
-            console.log('File available at', downloadURL);
-            // Create an instance of the ImageServiceController class
-            const imageServiceController = new ImageServiceController();
-            // Add the image to the Firestore database
-            imageServiceController.addImage(new MyImage(downloadURL, title, description));
-            // Display the list of images
-            displayImages();
-            //chiude il form
-            document.getElementById('image-form').style.display = 'none';
-            document.getElementById('loader').style.display = 'none';
-          });
-        }
-      );
-    }
-
     function sistema() {
       document.getElementById('modal-edit-form').style.display = 'none';
       document.getElementById('modal-text-container').style.display = 'block';
 
     }
-
-    function updateImageData() {
-      // Create an instance of the ImageServiceController class
-      const imageServiceController = new ImageServiceController();
-      // Update the image in the Firestore database
-      selectedImage.titolo = document.getElementById('modal-edit-title').value;
-      selectedImage.descrizione = document.getElementById('modal-edit-desc').value;
-      //trava l'id su firebase usando come query il titolo , l'url e la descrizione , anche se non è univoco ci dovrei riuscire
-      const query = db.collection('images').where('url', '==', selectedImage.url).where('titolo', '==', selectedImage.titolo).where('descrizione', '==', selectedImage.descrizione);
-      query.get().then((querySnapshot) => {
-        querySnapshot.forEach((doc) => {
-          //console.log(doc.id);
-
-          //aggiorna i dati del modal
-          document.getElementById('modal-title').innerText = selectedImage.titolo;
-          document.getElementById('modal-desc').innerText = selectedImage.descrizione;
-          document.getElementById('modal-h4').innerText = selectedImage.titolo;
-          selectedImage.id = doc.id;
-          imageServiceController.updateImage(selectedImage.id, new MyImage(selectedImage.url, selectedImage.titolo, selectedImage.descrizione));
-          // Display the list of images
-          displayImages();
-          //chiude il form
-          document.getElementById('modal-edit-form').style.display = 'none';
-          document.getElementById('modal-text-container').style.display = 'block';
-
-        });
-      });
-
-
-    }
-    //END FUNCTIONS
-
-
-    //handler modal
-    document.getElementById('modal-image').addEventListener('click', () => {
-      document.getElementById('modal').style.display = 'none';
-    });
-    //handler close form
-    document.getElementById('close-form').addEventListener('click', () => {
-      document.getElementById('modal').style.display = 'none';
-    });
-    //quando scelgo il file si vede una anteprima
-    document.getElementById('image-file').addEventListener('change', (event) => {
-      const file = event.target.files[0];
-      const reader = new FileReader();
-      reader.onload = (event) => {
-        document.getElementById('image-preview').style.display = 'block';
-        document.getElementById('image-preview').src = event.target.result;
-      };
-      reader.readAsDataURL(file);
-    });
-    // Add an event listener to the form to handle the submit event
-    document.getElementById('image-form').addEventListener('submit', (event) => {
-      // Prevent the form from submitting
-      event.preventDefault();
-      // Get the file and the image title and description from the form
-      const file = document.getElementById('image-file').files[0];
-      const title = document.getElementById('image-title').value;
-      const description = document.getElementById('image-description').value;
-      // Check if a file was selected
-      if (file) {
-        // Upload the file to Firebase Storage and add it to the Firestore database
-        uploadImage(file, title, description);
-      }
-    });
-    // Add an event listener to the button-edit to show the edit image form
-    document.getElementById('edit-button').addEventListener('click', () => {
-      // Show the edit image form
-      document.getElementById('modal-edit-form').style.display = 'block';
-      // Hide the image list
-      document.getElementById('modal-text-container').style.display = 'none';
-      //valorizza campi con i dati dell'immagine
-      document.getElementById('modal-edit-title').value = selectedImage.titolo;
-      document.getElementById('modal-edit-desc').value = selectedImage.descrizione;
-    });
-
-    let selectedImage = null;
 
     displayImages();
 
