--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     // ...
     // Initialize the Firebase app
     const firebaseConfig = {
-      apiKey: "AIzaSyB8m3IyfgaH7_S3f0z_8j7Nf-ryoL5H3_g",
+      apiKey: "",
       authDomain: "wada-42dd4.firebaseapp.com",
       databaseURL: "https://wada-42dd4.firebaseio.com",
       projectId: "wada-42dd4",
